# internal/provider/types/journey_creation_request_v2_settings.go
@@ -5,6 +5,7 @@ package types
 import "github.com/hashicorp/terraform-plugin-framework/types"
 
 type JourneyCreationRequestV2Settings struct {
+	AccessMode                types.String                          `tfsdk:"access_mode"`
 	AddressSuggestionsFileID  types.String                          `tfsdk:"address_suggestions_file_id"`
 	AddressSuggestionsFileURL types.String                          `tfsdk:"address_suggestions_file_url"`
 	Description               types.String                          `tfsdk:"description"`
