# openapi.yml
@@ -247,7 +247,7 @@ paths:
     post:
       operationId: generateDocument
       summary: generateDocument
-      description:  |
+      description: |
         Builds document generated from a template with journey values."
 
         Supported input document types:
@@ -270,13 +270,13 @@ paths:
             schema:
               $ref: "#/components/schemas/GenerateDocumentRequest"
       responses:
-        '200':
+        200:
           description: Generated document output
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/GenerateDocumentResponse"
- 
+
   # Journey V2 (Restful endpoints)
   /v2/journey/configuration:
     post:
@@ -611,6 +611,8 @@ components:
                         - "right"
             safeModeAutomation:
               type: boolean
+            canary:
+              type: boolean
             designId:
               type: string
             templateId:
@@ -665,6 +667,10 @@ components:
                 - PUBLIC
                 - PRIVATE
             isPublished:
+              type: boolean
+            status:
+              type: string
+            isActive:
               type: boolean
           required:
             - designId
@@ -872,14 +878,19 @@ components:
             addressSuggestionsFileId:
               type: string
               nullable: true
-          additionalProperties: false     
+            accessMode:
+              type: string
+              enum:
+                - PUBLIC
+                - PRIVATE
+          additionalProperties: false
         _manifest:
           type: array
           description: Manifest/Blueprint ID used to create/update the entity
           items:
             type: string
             format: uuid
-            example: 123e4567-e89b-12d3-a456-426614174000       
+            example: 123e4567-e89b-12d3-a456-426614174000
       required:
         - name
         - steps
@@ -1179,7 +1190,7 @@ components:
       required:
         - file_id
         - context_data
-    
+
   securitySchemes:
     EpilotAuth:
       type: http
